--- a/styles.css
+++ b/styles.css
@@ -364,7 +364,7 @@ body.dark-mode .social a,
 body.dark-mode .exp-role,
 body.dark-mode .work-link,
 body.dark-mode .testimonial b {
-  color: var(--color-link-dark);
+  color: var(--color-text-main);
 }
 body.dark-mode .social a svg {
   fill: var(--color-link-dark);
