--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ body {
   background: var(--color-bg);
   box-sizing: border-box;
   margin: 0;
-  padding-left: 160px;
-  padding-right: 160px;
+  padding-left: 200px;
+  padding-right: 200px;
   font-family: 'Mark Pro', Arial, sans-serif;
   color: var(--color-text);
   font-size: .75rem;
@@ -49,7 +49,7 @@ html {
   box-sizing: border-box;
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-right: 150px;
+  padding-right: 100px;
   height: 100vh;
   position: sticky;
   top: 0;
@@ -83,7 +83,7 @@ html {
 .sidebar-bio {
   margin-bottom: 18px;
   color: var(--color-muted);
-  font-size: 1rem;
+  font-size: .75rem;
   line-height: 1.5;
 }
 
