bg color to gray

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --color-bg: #fff;
+  --color-bg: #f0f0f0;
   --color-text-main: #404040;
   --color-text: #555;
   --color-link: #F21783;
